kubernetes-controllers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  labels:
    app: homework-pod

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 35%
  replicas: 3
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: Exists
  
      containers:
      - name: webserver
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8000
            name: nginx-web-view
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ['bash', '-c', 'rm /homework/index.html']
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5

      volumes: 
      - name: homework-volume
        emptyDir: {}
