kubernetes-controllers/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: homework-service
spec:
  type: ClusterIP
  selector:
    app: homework
  ports:
    - protocol: TCP
      port: 80
      targetPort: nginx-web-view
