kubernetes-controllers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite/target: /
spec:
  ingressClassName: nginx-example
  rule:
  - host: "homework.otus"
  - http:
      paths:
      - path: /index.html
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
